[package]
name = "std_helper"
version = "0.1.0"
edition = "2021"
authors = ["onekg <1kg.coop@gmail.com>"]
license = "MIT"
repository = "https://github.com/1kawdalg/std_helper_rs"
documentation = "https://docs.rs/std_helper/latest/std_helper/"
description = "Modification of standart crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
